--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^0.25.3"
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
 ipython = "^7.10"
+scikit-learn = "^0.22.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
